--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
         {{#each resList}}
         {{!-- this => resList ，這項參數 --}}
 
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
+        <div class="text-secondary">
           <div class="card mb-3">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
             <div class="card-body p-3">
@@ -36,15 +36,22 @@
               <div class="restaurant-category mb-1">
                 <i class="fas fa-utensils pr-2"></i> {{this.category}}
               </div>
-
               <span class="badge badge-pill badge-danger font-weight-normal">
                 {{this.rating}}
                 <i class="fas fa-star fa-xs"></i>
               </span>
+              <div class="my-2">
+                <a href="/restaurants/{{this._id}}/edit" class="btn btn-secondary">Edit</a>
+                <a href="/restaurants/{{this._id}}" class="btn btn-info">Details</a>
+                <form action="/restaurants/{{ this._id }}/delete" method="POST" style="display: inline;">
+                  <button type="submit" class="btn btn-danger">delete</button>
+                </form>
+              </div>
+
 
             </div>
           </div>
-        </a>
+        </div>
         {{/each}}
       </div>
     </div>
@@ -56,44 +63,3 @@
   <h3>沒有符合「{{searchKeyWord}}」的搜尋結果，請輸入其他關鍵字。</h3>
 </div>
 {{/if}}
-
-{{!-- backup data ↓ --}}
-{{!-- <a href="/restaurants/1" class="text-secondary">
-  <div class="card mb-3">
-    <img class="card-img-top" src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5635/01.jpg"
-      alt="Sababa 沙巴巴中東美食">
-    <div class="card-body p-3">
-      <h6 class="card-title mb-1">Sababa 沙巴巴中東美食</h6>
-
-      <div class="restaurant-category mb-1">
-        <i class="fas fa-utensils pr-2"></i> 中東料理
-      </div>
-
-      <span class="badge badge-pill badge-danger font-weight-normal">
-        4.1
-        <i class="fas fa-star fa-xs"></i>
-      </span>
-
-    </div>
-  </div>
-</a> --}}
-{{!-- <a href="/restaurants/2" class="text-secondary">
-  <div class="card mb-3">
-    <img class="card-img-top" src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5628/02.jpg"
-      alt="梅子鰻蒲燒專賣店">
-    <div class="card-body p-3">
-      <h6 class="card-title mb-1">梅子鰻蒲燒專賣店</h6>
-
-      <div class="restaurant-category mb-1">
-        <i class="fas fa-utensils pr-2"></i> 日本料理
-      </div>
-
-      <span class="badge badge-pill badge-danger font-weight-normal">
-        4.3
-        <i class="fas fa-star fa-xs"></i>
-      </span>
-
-    </div>
-  </div>
-</a>
---}}
