--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,11 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
+        <div class="">
+          <a href="/todos/new" class="btn btn-primary">Create</a>
+        </div>
       </div>
+
     </nav>
 
     <div class="banner"></div>
