--- a/views/showDetails.handlebars
+++ b/views/showDetails.handlebars
@@ -2,8 +2,14 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
+      <a href="/restaurants/{{showID._id}}/edit" class="btn btn-secondary">Edit</a>
 
-      <p class="mb-1">
+      <form action="/restaurants/{{ showID._id }}/delete" method="POST" style="display: inline;">
+        <button type="submit" class="btn btn-danger">delete</button>
+      </form>
+      <a href="/" class="btn  btn-link">Back</a>
+
+      <p class="mb-1 mt-5">
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
           類別：
