add Create Restaurant & Router & toNew

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
           我的餐廳清單
         </a>
         <div class="">
-          <a href="/todos/new" class="btn btn-primary">Create</a>
+          <a href="/restaurant/new" class="btn btn-primary">Create</a>
         </div>
       </div>
 
