--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -41,11 +41,11 @@
                 <i class="fas fa-star fa-xs"></i>
               </span>
               <div class="my-2">
-                <a href="/restaurants/{{this._id}}/edit" class="btn btn-secondary">Edit</a>
-                <a href="/restaurants/{{this._id}}" class="btn btn-info">Details</a>
-                <form action="/restaurants/{{ this._id }}/delete" method="POST" style="display: inline;">
+                <a href="/restaurant/{{this._id}}/edit" class="btn btn-secondary">Edit</a>
+                <a href="/restaurant/{{this._id}}" class="btn btn-info">Details</a>
+                <form action="/restaurant/{{ this._id }}/delete" method="POST" style="display: inline;">
                   <button type="submit" class="btn btn-danger">delete</button>
-                  
+
                 </form>
               </div>
 
