--- a/views/toNew.handlebars
+++ b/views/toNew.handlebars
@@ -34,7 +34,7 @@
       </div>
       <div class="col-md-2 mb-3">
         <label for="image">圖片網址</label>
-        <input type="text" class="form-control" id="image" name="image" placeholder="http://...(請貼出圖片網址)..." required>
+        <input type="url" class="form-control" id="image" name="image" placeholder="http://...(請貼出圖片網址)..." required>
 
 
       </div>
